changed header elements in css

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ header nav ul {
     list-style-type: none;
 }
 
-header nav h1 ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
